--- a/css/khawna-styles.css
+++ b/css/khawna-styles.css
@@ -957,9 +957,7 @@ margin-left: 300px;
   color: #ffffff;
  padding-top: 130px;
   background-color: #e0e4cc;
-  background: url(../images/11.png) top no-repeat;
-  
-  
+  background: url(images/forhim.jpg) top no-repeat;
   
 }
 
