--- a/css/khawna-styles.css
+++ b/css/khawna-styles.css
@@ -195,7 +195,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 .chat {
-  background: #ffffff;
+  background: #e9e9e9;
   width: 100%;
   height:100%;
   margin: 0 auto;
