--- a/bootstrap-3.1.1-dist/css/bootstrap.css
+++ b/bootstrap-3.1.1-dist/css/bootstrap.css
@@ -2278,9 +2278,9 @@ fieldset[disabled] .btn-warning.active {
   background-color: #fff;
 }
 .btn-danger {
-  color: #fff;
-  background-color: #d9534f;
-  border-color: #d43f3a;
+  color: grey;
+  background-color: ;
+  border-color: #fd9c41;
 }
 .btn-danger:hover,
 .btn-danger:focus,
@@ -2288,8 +2288,8 @@ fieldset[disabled] .btn-warning.active {
 .btn-danger.active,
 .open .dropdown-toggle.btn-danger {
   color: #fff;
-  background-color: #d2322d;
-  border-color: #ac2925;
+  background-color: #fd9c41;
+  border-color: #fd9c41;
 }
 .btn-danger:active,
 .btn-danger.active,
